<resources>
    <string name="app_name">我在</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_setting">设置</string>
    <string name="button_feedback">反馈</string>
    <string name="button_about">关于</string>
    <string name="menuGood">我在</string>
    <string name="menuNews">新闻资讯</string>
    <string name="menuStudio">学习教程</string>
    <string name="menuBlog">社区博客</string>
    <string name="menuHome">我在</string>
    <string name="menuNotice">通知公告</string>
    <string name="menuSetting">帐号设置</string>
    <string name="menuPasswordModify">密码修改</string>
    <string name="menuFeedback">反馈</string>
    <string name="menuAbout">关于</string>
    <string name="menuExit">退出</string>
    <string name="todo_doing">进行中</string>
    <string name="todo_end">已结束</string>
    <string name="DetailsGood">太棒了</string>
    <string name="DetailsBed">一般般</string>
    <string name="DetailsCollect">收藏</string>
    <string name="DetailsShare">分享</string>
    <string name="DetailsDiscuss">评论</string>
    <string name="user_center">个人中心</string>
    <string name="user_login_alert">你终于来啦，快登录吧</string>
    <string name="user_key_alert">输入你的密钥</string>
    <string name="user_bind_btn">绑定</string>
    <string name="user_qr_scan_btn">二维码扫描登陆</string>
    <string name="user_alert">"请在web端登陆后，寻找你的密钥：
http://my.eoe.cn/admin/profile/auth.html
会员中心>设置>客户端密钥（如下图）"</string>
    <string name="user_button_alert">登陆后，你可以享有以下功能</string>
    <string name="user_level_alert">社区勋章</string>
    <string name="user_login_another">换一种方式登录</string>
    <string name="user_logout">注销</string>
    <string name="user_title">eoe</string>
    <string name="user_cancel">取消</string>
    <string name="user_remember">记住密码</string>
    <string name="user_enter">立即登录</string>
    <string name="user_user_empty">用户名不能为空!</string>
    <string name="user_pwd_empty">密码不能为空!</string>
    <string name="user_login_prompt">请先登录</string>
    <string name="user_login_enter_key">请先输入密钥</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="httpError">连接失败</string>
    <string name="httpisNull">没有网络</string>
    <string name="user_center_error">请先登录再进入用户中心</string>
    <string name="user_username">输入用户名</string>
    <string name="user_pwd">输入密码</string>
    <string name="user_login_error">用户名或者密码错误!</string>
    <string name="user_loginKey_error">错误密钥!</string>
    <string name="user_loginInfo_error">"获取信息失败，
请尝试重新登录。"</string>
    <string name="about">关于我们</string>
    <string name="about_title">"名称:eoe
版本:1.1.0
基于:www.eoe.cn"</string>
    <string name="about_intro">"[应用简介]
eoe客户端是一款专为移动开发者提供帮助的软件。依靠www.eoe.cn开发者社区，将高质量的移动开发资讯、学习教程、代码库等信息提供给移动开发者，以方便大家能更好更快的学习移动开发的相关知识，尽快成长。"</string>
    <string name="about_story">"[应用故事]
eoe的理念是‘让移动开发更简单’，如何让移动开发者更简单是我们不断思考和探索的，我们认为有组织、有体系的内容对开发者的学习和成长都是最有价值的，于是大家都希望有这么一款让我们零碎时间里学习到最有价值的知识，于是eoe客户端诞生了!"</string>
    <string name="about_thanks">"[致谢]
eoe客户端里边的内容资源都是由eoe开发者社区的忠实用户所提供的，并由eoe开发者社区开发进行组织和展示，感谢其中包括的所有人，感谢你们提供的内容，有了你们eoe会更精彩！"</string>
    <string name="about_opensource">"[开源]
eoe客户端代码已经完全开源，欢迎每个eoer们参与, 详情情况请关注社区相关信息, 感谢每一个参与的人和每一行代码, 尤其感谢com360, Anson Yang, jackrex, KingLaw, feicien, kris, kaxi4it, ronanhardiman,lichen228等贡献的代码."</string>
    <string name="about_tontact">联系我们：</string>
    <string name="about_sina">\@eoe移动开发者社区</string>
    <string name="about_weixin">eoe_cn</string>
    <string name="detail_prompt">写评论</string>
    <string name="detail_enter">发表</string>
    <string name="discuss_succeed">发表成功</string>
    <string name="discuss_fail">发表失败</string>
    <string name="query_prompt">请输入关键字</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_input_content">请输入您的反馈意见</string>
    <string name="feedback_back">返回</string>
    <string name="user_center_get_info_error">获取信息错误</string>
    <string name="user_center_my_Collect">我的收藏</string>
    <string name="user_center_my_Intro">个人简介</string>
    <string name="user_center_exit">退出功能</string>
    <string name="user_center_e_coin">e币:%s</string>
    <string name="user_center_e_reputation">e望:%s</string>
    <string name="et_account_hint">手机号</string>
    <string name="et_password_hint">密码</string>
    <string name="et_password_repeat_hint">重复密码</string>
    <string name="et_sex_hint">性别</string>
    <string name="find_password">找回密码</string>
    <string name="register">新用户</string>
    <string name="login">登入</string>
    <string name="forget_password">忘记密码?</string>
    <string name="tv_country">中国+86</string>
    <string name="et_phoneNumber_hint">请输入你的手机号码</string>
    <string name="forget_password_tip">请输入您的注册手机号</string>
    <string name="register_phoneNumber_tip">请输入您的有效手机号，该手机号将作为您的登录帐户</string>
    <string name="et_phoneVerifyCode_hint">填入手机验证码</string>
    <string name="send_phoneVerifyCode">发送验证码</string>
    <string name="title_phoneNumber">请填写手机号码</string>
    <string name="btn_next">下一步</string>
    <string name="tv_xieyi">我已阅读并同意</string>
    <string name="tv_xieyi_url">使用条款和隐私政策</string>
    <string name="tv_tips_password">请输入您的登录密码，6至15位数字或字符</string>
    <string name="tv_tips_name">请输入您的真实姓名，以便有效的管理个人信息</string>
    <string name="et_name_hint">真实姓名</string>
    <string name="register_complete">完成</string>
    <string name="title_register_info">设置密码和昵称</string>
    <string name="tv_qq">你已获得我在体验帐号：</string>
    <string name="tv_qq_number">帐号：imhere \n密码：123456</string>
    <string name="tv_register_result">请用以上我在帐户登录体验！</string>
    <string name="tv_tiaokuan">服务声明</string>
    <string name="tv_register_success">注册成功</string>
    <string name="register_success">进入我在</string>
    <string name="tv_search">搜索</string>
    <string name="news">消息</string>
    <string name="user_name">开心一刻</string>
    <string name="user_feel">好好学习,天天向上</string>
    <string name="user_time">12:30</string>
    <string name="tv_loading">正加载,请稍后...</string>
    <string name="no_data">网络异常...</string>
    <string name="pop_chat">多人聊天</string>
    <string name="pop_sangzhao">分享</string>
    <string name="pop_camera">水印相机</string>
    <string name="pop_scan">扫一扫</string>
    <string name="app_cancle">取消</string>
    <string name="app_change_user">注销用户</string>
    <string name="app_exit_user">退出</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <string name="sd_pic">相册</string>
    <string name="sacn_dialog_title">是否打开链接?</string>
    <string name="scan_url">http://www.baidu.com</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="camera_water">水印相机</string>
    <string name="camera_more">更多</string>
    <string name="camera_day">2014-04-14</string>
    <string name="camera_hour">21:01</string>
    <string name="camera_day_hour">2014-04-14 21:01</string>
    <string name="camera_address">珠海</string>
    <string name="camera_tep">23℃多云</string>
    <string name="camera_pm">PM2.5 32</string>
    <string name="camera_txt">静静的享受独自一个人的午后</string>
    <string name="camera_ni">虫虫</string>
    <string name="tiaozheng">旋转</string>
    <string name="control">管理</string>
    <string name="group">分组</string>
    <string name="all">全部</string>
    <string name="cnews">消息</string>
    <string name="contacter">联系人</string>
    <string name="tv_phone">通讯录</string>
    <string name="tv_group">群组</string>
    <string name="tv_discuss">讨论组</string>
    <string name="tv_life">生活服务</string>
    <string name="friend_group">好友分组</string>
    <string name="device">我的设备</string>
    <string name="group_count">1/2</string>
    <string name="child_feel">[在线]好好学习天天向上</string>
    <string name="tv_call1">你联系过同事朋友的聊天记录都会在这里出现</string>
    <string name="tv_call2">快和同事朋友开始沟通吧！</string>
    <string name="btn_call">找人聊聊</string>
    <string name="recentchat">最近聊天</string>
    <string name="choose_constact">选择联系人</string>
    <string name="search">请输入关键字</string>
    <string name="dynamic">动态</string>
    <string name="mime">我</string>
    <string name="tv_newfriend">新朋友</string>
    <string name="tv_tongxunlu">通讯录</string>
    <string name="tv_friend">QQ好友</string>
    <string name="wifi_state">WLAN 状态</string>
    <string name="instruction_pre">启动服务，可以从电脑远程管理手机文件</string>
    <string name="instruction">请在"我的电脑"地址栏输入:</string>
    <string name="notif_server_starting">远程管理已开启</string>
    <string name="notif_title">远程管理</string>
    <string name="no_wifi_hint">没有WLAN网络，请检查WLAN设置</string>
    <string name="start_server">开启服务</string>
    <string name="stop_server">停止服务</string>
    <string name="no_wifi">没有WLAN网络</string>
    <string name="storage_warning">没有外部存储设备或SD卡不可用</string>
    <string name="wifi">文件管理</string>
    <string name="sdgl">考勤查询</string>
    <string name="ysbh">通知公告</string>
    <string name="wdrj">帐号设置</string>
    <string name="rjyx">关于</string>
    <string name="sygj">反馈</string>
    <string name="sjfd">退出</string>
    <string name="txbf">通讯备份</string>
    <string name="qqwp">门禁开门</string>
    <string name="text_ack_msg">已读</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">连接不到服务器，请稍后重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
</resources>