<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.ysls.imhere.widget.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/tv_tips_password"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        android:padding="5dp" />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_password_repeat_hint"
        android:inputType="textPassword"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/tv_tips_name"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_name_hint"
        android:inputType="text"
        android:padding="5dp" />

    <EditText
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_sex_hint"
        android:inputType="text"
        android:padding="5dp" />

    <Button
        android:id="@+id/register_complete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_btn"
        android:text="@string/register_complete"
        android:textColor="@color/whites"
        android:textSize="18sp" />

</LinearLayout>