<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <include layout="@layout/search_bar" />

    <include
        android:id="@+id/rl_error_item"
        layout="@layout/chat_neterror_item"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:cacheColorHint="#00000000"
        android:divider="@null" />

    <RelativeLayout
        android:id="@+id/rl_add_friends_tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/qq_conversation_icon_calllist_empty" />

        <TextView
            android:id="@+id/tv_call1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_call"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_call1" />

        <TextView
            android:id="@+id/tv_call2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_call1"
            android:gravity="center_horizontal"
            android:text="@string/tv_call2" />

        <Button
            android:id="@+id/btn_constact"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/tv_call2"
            android:layout_margin="20dp"
            android:background="@drawable/login_btn"
            android:text="@string/btn_call"
            android:textColor="@color/whites" />
    </RelativeLayout>

</LinearLayout>