<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.ysls.imhere.widget.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/forget_password_tip"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:orientation="horizontal" >

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/devide_line" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/white"
            android:hint="@string/tv_country"
            android:inputType="phone"
            android:padding="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/find_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_btn"
        android:text="@string/find_password"
        android:textColor="@color/whites"
        android:textSize="18sp" />
</LinearLayout>